# clean-base

./: .cz.toml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/dtos/: children.rs  enums.rs  mod.rs  parent.rs
src/entities/: default_response.rs  mod.rs
src/utils/: errors.rs
src/utils/errors/: base.rs  default_factories.rs  factories.rs  mod.rs
