[package]
name = "clean-base"
version = "1.0.0"
edition = "2021"
description = "A simple package with useful dependencies for Rust packages."
license = "Apache-2.0"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
repository = "https://github.com/sgelias/clean-base"
readme = "./README.md"
keywords = ["clen-architecture"]
categories = ["development-tools"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "3", features = ["uuid"] }
regex = "1"
